098_bst_map/grade.txt
Grading at 11/17/2020:15:19:12.401490
For commit ID d70e3112117fce3ae980a3086641d8b20b39a099
Grading at Tue Nov 17 23:19:11 CST 2020
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = int]’:
89-tester.cpp:197:1:   required from here
bstmap.h:112:28: error: cannot convert ‘BstMap<int, int>::Node**’ to ‘BstMap<int, int>::Node*’ in initialization
                     Node * curr_left = &(*curr)->left;
                            ^~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:197:1:   required from here
bstmap.h:112:28: error: cannot convert ‘BstMap<int, std::__cxx11::basic_string<char> >::Node**’ to ‘BstMap<int, std::__cxx11::basic_string<char> >::Node*’ in initialization
                     Node * curr_left = &(*curr)->left;
                            ^~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = Tester]’:
89-tester.cpp:197:1:   required from here
bstmap.h:112:28: error: cannot convert ‘BstMap<int, Tester>::Node**’ to ‘BstMap<int, Tester>::Node*’ in initialization
                     Node * curr_left = &(*curr)->left;
                            ^~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:197:1:   required from here
bstmap.h:112:28: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, int>::Node**’ to ‘BstMap<std::__cxx11::basic_string<char>, int>::Node*’ in initialization
                     Node * curr_left = &(*curr)->left;
                            ^~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:197:1:   required from here
bstmap.h:112:28: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node**’ to ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node*’ in initialization
                     Node * curr_left = &(*curr)->left;
                            ^~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:197:1:   required from here
bstmap.h:112:28: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node**’ to ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node*’ in initialization
                     Node * curr_left = &(*curr)->left;
                            ^~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = int]’:
89-tester.cpp:197:1:   required from here
bstmap.h:112:28: error: cannot convert ‘BstMap<Tester, int>::Node**’ to ‘BstMap<Tester, int>::Node*’ in initialization
                     Node * curr_left = &(*curr)->left;
                            ^~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:197:1:   required from here
bstmap.h:112:28: error: cannot convert ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node**’ to ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node*’ in initialization
                     Node * curr_left = &(*curr)->left;
                            ^~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = Tester]’:
89-tester.cpp:197:1:   required from here
bstmap.h:112:28: error: cannot convert ‘BstMap<Tester, Tester>::Node**’ to ‘BstMap<Tester, Tester>::Node*’ in initialization
                     Node * curr_left = &(*curr)->left;
                            ^~~~~~~~~
The code did not compile.  This test failed.

Overall Grade: F
